@@ -124,6 +124,9 @@ use GET instead of HEAD (default) for the HTTP related checks
 .BR "  --ignore-altnames"
 ignores alternative names when matching pattern specified in -n (or the host name)
 .TP
+.BR "  --ignore-connection-problems" " [state]"
+in case of connection problems returns OK or the optional state
+.TP
 .BR "   --ignore-exp"
 ignore expiration date
 .TP
